--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx eleventy",
     "start": "npx eleventy --serve",
-    "debug": "DEBUG=* npx eleventy"
+    "debug": "DEBUG=Eleventy* npx @11ty/eleventy"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@11ty/eleventy": "^0.12.1",
     "autoprefixer": "^10.0.2",
     "file-size": "^1.0.0",
     "fs-extra": "^9.0.1",
@@ -32,5 +31,8 @@
     "markdown-it-testgen": "^0.1.3",
     "postcss": "^8.1.8",
     "sass": "^1.29.0"
+  },
+  "devDependencies": {
+    "@11ty/eleventy": "^1.0.1"
   }
 }
